fix: fixed width on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,7 @@
 
   .ant-layout-content {
     padding: 0 12px !important;
-    max-width: calc(100vw - 40px);
+    max-width: calc(100vw);
   }
 
   .ant-layout-footer {
